--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "mz": "2.4.0",
         "sequelize": "3.24.1",
         "mysql": "2.11.1",
-        "axios":"0.16.1",
-        "multer": "1.3.0"
+        "axios":"0.16.1"
     }
 }
